--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,11 @@ services:
         image: grafana/grafana
         ports:
             - "3000:3000"
+        volumes: 
+            - "grafana-data:/var/lib/grafana"
+            - "./grafana-config:/usr/app/config"
+        environment: 
+            GF_PATHS_CONFIG: "/usr/app/config/grafana.ini"
     graphite:
         image: graphiteapp/graphite-statsd
         ports: 
@@ -14,3 +19,5 @@ services:
             - "2024:2024"
             - "8125:8125/udp"
             - "8126:8126"
+volumes:
+    grafana-data:
