--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.19.2",
     "lodash": "^4.17.15",
     "node-fetch": "^2.6.0",
     "parse-link-header": "^1.0.1"
